# ffmpeg_lab

./: .gitignore  CMakeLists.txt
cmake-modules/: FindFFMPEG.cmake
prebuilt/: README
src/: main.c
